	- replaced include of <malloc.h> with includes of <stdlib.h>
	- fixed md5sum of source packages w/ a buildroot is used
	- fixed bugs installing version 1 packages
	- remove hyphens from uname() result (specifically for HP-UX)
	- hacks to recognize architecture under parisc
	- RPM_INSTALL_PREFIX wasn't being set properly (this should be
	  fixed now)

2.4.4 -> 2.4.5:
	- call getpwnam()/endpwent() once before a chroot(), forcing name 
	  service shared libs to be loaded from outside of the root path
	- added vesrion stamp to lib/misc.o (and librpm.a by extension)
	- fixed config.sub, config.guess to recognize i686
	- ARCHIVESIZE tag didn't get filled in properly, breaking progress
	  meters

2.4.3 -> 2.4.4:
	- restore working directory after installing a package w/ a chroot
	- dump the package stack when a dependency loop is encountered
	- when a user/group lookup fails, end*ent() and retry 
	- fixed broken --scripts argument (it was --s2)
	- only display the packager and url in -qi output if they have defined
	  values
	- print "(not installed)" as the install time for -p queries rather
	  then "not a number"
	- almost completely rewrote rcfile parsing; I'm sure this will
	  break things eventually but it's much more flexible now
	- added buildarch/buildos compatibility tables, listed values
	  in --showrc
	- added cpio archive building code; GNU cpio is no longer used!
	  packages created w/ rpm 2.4.4 and later cannot be installed with
	  rpm 2.4 - rpm 2.4.3 however (version of RPM before 2.4 will 
	  work fine, however). An "error -2 reading header" happens when
	  this is attempted
	- removed cpiobin from rpmrc
	- added rpmrc "provides" tag to allow easy fulfillment of 
	  automatically generated dependencies
	- look for random() in libm if it can't be found be default
	- fixed problems in Solaris's autodeps stuff (Eric Mumpower)
	- --setperms should work properly on directories now
	- --justdb on install, upgrade, and erasure causes a database