@@ -7,6 +7,7 @@
 	- hacks to recognize architecture under parisc
 	- RPM_INSTALL_PREFIX wasn't being set properly (this should be
 	  fixed now)
+	- replaced temporary file creation to be race-condition safe
 
 2.4.4 -> 2.4.5:
 	- call getpwnam()/endpwent() once before a chroot(), forcing name 
